fixed IE hero-lcc center aligned issue

--- a/app/assets/sass/_hero-lcc.scss
+++ b/app/assets/sass/_hero-lcc.scss
@@ -30,7 +30,6 @@
         .hero-lcc__content{
             max-width:900px;
             width:100%;
-            margin:0 auto;
             padding:15px;
 
             @media (max-width: 500px) {
